# fastapi-jet

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
.cursor/rules/: fastapi-jet.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: python-package.yml  release.yml
docs/: CONVENTIONS.md  index.md
examples/: README.md
fastapi_jet/: __init__.py  __main__.py  app_registry.py  checks.py  cli.py  constants.py  context.py  decorators.py  generator.py  project.py  register.py  routes_display.py  tools.py  utils.py
fastapi_jet/commands/: applist.py  check.py  runserver.py  shell.py  startapp.py  startproject.py
fastapi_jet/templates/app/: cookiecutter.json
fastapi_jet/templates/app-crud/: cookiecutter.json
fastapi_jet/templates/app-crud-versioned/{{cookiecutter.folder_name}}/: dependencies.py
fastapi_jet/templates/app-crud/{{cookiecutter.folder_name}}/: routers.py  schemas.py  services.py
fastapi_jet/templates/app-versioned/{{cookiecutter.folder_name}}/: routers.py
fastapi_jet/templates/app/{{cookiecutter.folder_name}}/: routers.py
fastapi_jet/templates/project/: cookiecutter.json
fastapi_jet/templates/project/{{cookiecutter.folder_name}}/: .env.example  .fastapi-jet  README.md  pyproject.toml
fastapi_jet/templates/project/{{cookiecutter.folder_name}}/apps/core/: routers.py
fastapi_jet/templates/project/{{cookiecutter.folder_name}}/base/: core.py  main.py  routing.py
fastapi_jet/templates/project/{{cookiecutter.folder_name}}/middlewares/: __init__.py
fastapi_jet/templates/project/{{cookiecutter.folder_name}}/tests/: test_app.py
tests/: conftest.py  test_app_registry.py  test_check.py  test_project.py  test_register.py  test_routes_display.py  test_template_integration.py  test_tools.py
