[tool.poetry]
name = "fastapi-jet"
version = "1.1.3"
description = "Managing FastAPI projects made easy."
authors = ["Mostafa Mosavi <mostafa.uwsgi@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/its0x4d/fastapi-jet"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"
tabulate = "^0.9.0"
uvicorn = "^0.24.0.post1"
questionary = "^2.0.1"
pydantic = "^2.5.2"
cookiecutter = "^2.5.0"
python-dotenv = "^1.0.0"
fastapi = "^0.105.0"


[tool.poetry.group.dev.dependencies]
questionary = "^2.0.1"
uvicorn = "^0.24.0.post1"
tabulate = "^0.9.0"
typer = "^0.9.0"
pytest = "^7.4.3"

[tool.poetry.scripts]
fastapi-jet = "fastapi_jet.cli:app"
fastjet = "fastapi_jet.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
