[tool.poetry]
name = "fastapi-jet"
version = "1.1.5"
description = "Modular FastAPI project management with a Django-inspired workflow."
authors = ["Mostafa Mosavi <mostafa.uwsgi@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/its0x4d/fastapi-jet"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.15.0"
tabulate = "^0.9.0"
uvicorn = "^0.24.0.post1"
questionary = "^2.0.1"
pydantic = "^2.10"
pydantic-settings = "^2.1.0"
cookiecutter = "^2.5.0"
python-dotenv = "^1.0.0"
fastapi = "^0.105.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.8.0"
pre-commit = "^4.0.0"

[tool.poetry.scripts]
fastapi-jet = "fastapi_jet.cli:app"
fastjet = "fastapi_jet.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = ["fastapi_jet/templates"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
