[metadata]
name = fastapi-jet
version = attr: fastapi_jet.__version__
author = Mostafa Mosavi
author_email = mostafa.uwsgi@gmail.com
description = A tool to manage FastAPI projects
long_description = file: README.md
long_description_content_type = text/markdown
keywords = fastapi, fastapi-manager, manager, fastapi-jet, fastapi-admin, fastapi-generator, fastapi-cli, fastapi-tool
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    cookiecutter >= 1.7.2
    pydantic[email] >= 1.7.2
    pydantic[dotenv] >= 1.7.2
    questionary >= 1.10.0
    typer >= 0.4, < 0.10

[options.entry_points]
console_scripts =
    fastapi-jet = fastapi_jet.main:app

[options.package_data]
* = README.md

[coverage:run]
omit = */templates/*