[project]
name = "{{ cookiecutter.package_name }}"
version = "0.1.0"
description = "{{ cookiecutter.name }} — a modular FastAPI project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.105.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]

[tool.fastapi-jet]
layout = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
